fix layout problem with footer

--- a/src/javascript/views/login.less
+++ b/src/javascript/views/login.less
@@ -1,5 +1,5 @@
 .login {
-  position: absolute;
+  position: relative;
   max-width: 350px;
   text-align: center;
 }
