--- a/src/javascript/views/registration.less
+++ b/src/javascript/views/registration.less
@@ -1,5 +1,5 @@
 .registration {
-  position: absolute;
+  position: relative;
   max-width: 350px;
   text-align: center;
 }
